# zotero-tag-process

./: .gitignore  README.md  pyproject.toml
tag-generation/: pyproject.toml
tag-generation/tag_generation/: __init__.py  cli.py  config.py  ingest.py  worker.py
tag-generation/tag_generation/web/: __init__.py  app.py
tag-generation/tag_generation/web/templates/: base.html  page1_setup.html  page2_review.html
tag-generation/tests/: conftest.py  test_web_app.py  test_worker.py
zotero-restructuring/: .env.example  .gitignore  pyproject.toml  taxonomy.yaml
zotero-restructuring/scripts/: verify_mcp.py
zotero-restructuring/tests/: conftest.py  test_cli.py  test_config.py  test_doi_utils.py  test_export.py  test_import_tags.py  test_library.py  test_models.py  test_reader.py  test_serve_cli.py  test_simulation.py  test_tags.py  test_validation.py  test_web_app.py
zotero-restructuring/zotero_restructuring/: __init__.py  apply.py  citations.py  cli.py  config.py  doi_utils.py  export.py  import_tags.py  library.py  models.py  reader.py  schema.py  simulation.py  tags.py  taxonomy.py  validation.py
zotero-restructuring/zotero_restructuring/web/: app.py  graph.py  stats.py
zotero-restructuring/zotero_restructuring/web/templates/: base.html  page1_update.html  page2_stats.html
zotero-tag-process/: README.md  pyproject.toml
zotero-tag-process/tests/: test_app.py
zotero-tag-process/zotero_tag_process/: __init__.py  cli.py  help_text.py
zotero-tag-process/zotero_tag_process/web/: __init__.py  app.py
zotero-tag-process/zotero_tag_process/web/templates/: base.html  index.html
