[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tag-generation"
version = "0.1.0"
description = "Generate LLM tags for an entire Zotero library, review them, and export an approved-tags database"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "inflect>=7.0",
    "python-dotenv>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "httpx>=0.27",
]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "httpx>=0.27"]

[project.scripts]
tag-generation = "tag_generation.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tag_generation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
