[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-restructuring"
version = "0.1.0"
description = "Safe, iterative reorganization of a Zotero library via an in-memory simulation sandbox"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "inflect>=7.0",
    "python-dotenv>=1.0",
    "click>=8.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
phase3 = ["anthropic>=0.20", "scikit-learn>=1.3"]
phase4 = ["pyzotero>=1.5", "networkx>=3.0"]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "httpx>=0.27",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "anthropic>=0.20",
    "pyzotero>=1.5",
    "numpy>=1.26",
    "scipy>=1.12",
]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[project.scripts]
zotero-restructuring = "zotero_restructuring.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zotero_restructuring*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
