[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-tag-process"
version = "0.1.0"
description = "Unified entry point for the Zotero tag enrichment pipeline (tag-generation + zotero-restructuring)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "httpx>=0.27",
    "tag-generation",
    "zotero-restructuring",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "httpx>=0.27"]

[project.scripts]
zotero-tag-process = "zotero_tag_process.cli:main"

[tool.uv.sources]
tag-generation = { path = "../tag-generation", editable = true }
zotero-restructuring = { path = "../zotero-restructuring", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["zotero_tag_process*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
